debugged projects page: prevent scrollbar from repositioning the page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+}
+
 body {
   color: white;
 }
@@ -19,6 +24,11 @@ body {
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
+}
+
+header,
+#projects-footer {
+  width: 100vw;
 }
 
 .nav-masthead .nav-link {
@@ -72,7 +82,7 @@ span,
 }
 
 .card:hover {
-  transform: scale(1.1);
+  transform: scale(1.025);
 }
 
 .card-img-overlay {
@@ -93,6 +103,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
+  z-index: 2;
 }
 
 footer a {
